# prism

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  MODULE.bazel  README.md  install.sh  setup.sh
software/baremetal/hellouart/: BUILD.bazel
software/baremetal/hellouart/src/: crt0.s  hellouart.c  hellouart.ld
